[package]
name = "elearningpoolrequest"
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "The Contract for pool request of E-Learning platform"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[dependencies]
near-sdk = "4.1.1"
